--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "@babel/preset-env": "^7.22.15",
     "@rollup/plugin-babel": "^6.0.3",
     "rollup": "^3.29.0"
+  },
+  "devDependencies": {
+    "rollup-plugin-typescript2": "^0.35.0",
+    "typescript": "^5.2.2"
   }
 }
