--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "url": "https://github.com/dmy1016/codewhat-utils/issues"
   },
   "homepage": "https://github.com/dmy1016/codewhat-utils#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
     "@rollup/plugin-babel": "^6.0.3",
-    "rollup": "^3.29.0"
-  },
-  "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "rollup": "^3.29.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.35.0",
     "typescript": "^5.2.2"
   }
