--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "codewhat-utils",
   "version": "1.0.0",
   "description": "This repository include common tool function",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.es.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean:dist": "rimraf dist",
+    "build:types": "npm run clean:dist && tsc -b ./tsconfig.types.json",
+    "build": "npm run build:types && rollup -c",
+    "test": "node test/test.js",
+    "pretest": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,9 +30,13 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
+    "@types/node": "^20.6.0",
     "rollup": "^3.29.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.35.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@babel/core": "^7.22.17"
   }
 }
