--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "rollup": "^3.29.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.35.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.5"
   },
   "dependencies": {
     "@babel/core": "^7.22.17"
