--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean:dist": "rm -rf ./dist",
     "build:types": "npm run clean:dist && tsc -b ./tsconfig.types.json",
     "build": "npm run build:types && rollup -c",
-    "test": "node test/test.js",
-    "pretest": "npm run build"
+    "pretest": "npm run build",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
