--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    /* 记录 baseUrl 的模块路径查找别名 */ "types": [] /* 类型声明文件 */
+    "types": ["node"]
   },
   "include": [
     /* 指定编译处理的文件列表 */
